--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -25,10 +25,18 @@
 
 .input {
   @apply w-full resize-none h-full outline-none bg-white border border-neutral-400 py-2 px-3 rounded-md;
-}
 
-.input:focus-within {
-  @apply outline outline-blue-600;
+  & textarea {
+    scrollbar-color: #737373 transparent;
+  }
+
+  &:focus-within {
+    @apply outline outline-blue-600;
+
+    & textarea {
+      scrollbar-color: #2563eb transparent;
+    }
+  }
 }
 
 /* fullscreen btn */
