--- a/src/app/view/components/Body/components/Table/Note/Note.module.css
+++ b/src/app/view/components/Body/components/Table/Note/Note.module.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-  @apply flex flex-row items-center gap-3 w-fit text-neutral-600;
+  @apply flex flex-row items-center gap-3 w-fit text-neutral-600 border-b border-b-neutral-300 pb-1;
 }
 
 .copy-btn {
